Fix layout issues

--- a/_sass/grid.scss
+++ b/_sass/grid.scss
@@ -1,5 +1,5 @@
 .container {
-  max-width: 1440px;
+  // max-width: 1440px;
   margin-left: auto;
   margin-right: auto;
 }
